Updates of product adding

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="all">
 	<base href="/">
 
 	<!-- 1. Load libraries -->
@@ -19,8 +20,7 @@
       System.import('app').catch(function(err){ console.error(err); });
     </script>
 
-
-	<link href="app/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- Custom Theme files -->
 	<!--theme-style-->
 	<link href="app/css/style.css" rel="stylesheet" type="text/css" media="all" />
